# resticrc

./: .drone.yml  .gitignore  Jenkinsfile  Makefile  config.toml  config.yml  overview.drawio  pylintrc  pyoxidizer.bzl  pyproject.toml  pytest.ini  readme.md  setup.cfg  setup.py
deb/: .gitignore
deb/debian/: files  install
debian/: changelog  control  install  rules
debian/resticrc/DEBIAN/: control  md5sums
resticrc/: __init__.py  __main__.py  commands.py  console.py  executor.py  models.py  parser.py  runner.py
resticrc/filtering/: __init__.py  api.py  plugins.py
tests/: conftest.py  test_app.py  test_configparser.py  test_exclude.py
