[tool.poetry]
name = "resticrc"
version = "0.1.0"
description = "Configuration interface to a restic backup tool."
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"
click = "^8.1.3"
attrs = "^22.1.0"
pluggy = "^1.0.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
resticrc = "resticrc.console:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
mypy = "^0.991"
pylint = "^2.15.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

